added get user logic

--- a/Goodies.Shop.Api/appsettings.Development.json
+++ b/Goodies.Shop.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GoodiesDB": "server=.;database=Goodies;trusted_connection=true;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
