--- a/Goodies.Shop.Api/Goodies.Shop.Api.csproj
+++ b/Goodies.Shop.Api/Goodies.Shop.Api.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Goodies.Shop.Database\Goodies.Shop.Database.csproj" />
+    <ProjectReference Include="..\Goodies.Shop.Model\Goodies.Shop.Model.csproj" />
   </ItemGroup>
 
 </Project>
