added main jwt logic

--- a/Goodies.Shop.Api/appsettings.Development.json
+++ b/Goodies.Shop.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "GoodiesDB": "server=.;database=Goodies;trusted_connection=true;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "http://localhost:5070",
+    "ValidIssuer": "http://localhost:5070",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
